scsi_host: Introduce virFindSCSIHostByPCI
Introduce a new function to parse the provided scsi_host parent address
and unique_id value in order to find the /sys/class/scsi_host directory
which will allow a stable SCSI host address

Add a test to scsihosttest to lookup the host# name by using the PCI address
and unique_id value

--- a/docs/formatstorage.html.in
+++ b/docs/formatstorage.html.in
@@ -226,7 +226,10 @@
                 For a PCI address of "0000:00:1f:2", the unique identifer files
                 can be found using the command
                 <code>find -H /sys/class/scsi_host/host*/unique_id |
-                xargs grep '[0-9]'</code>.
+                xargs grep '[0-9]'</code>. Optionally, the
+                <code>virsh nodedev-dumpxml scsi_hostN</code>' of a
+                specific scsi_hostN list entry will list the
+                <code>unique_id</code> value.
               </dd>
             </dl>
           </dd>
