--- a/Makefile.am
+++ b/Makefile.am
@@ -23,7 +23,8 @@ SUBDIRS = . gnulib/lib include src daemon tools docs gnulib/tests \
   tests po examples/object-events examples/hellolibvirt \
   examples/dominfo examples/domsuspend examples/apparmor \
   examples/xml/nwfilter examples/openauth examples/systemtap \
-  tools/wireshark examples/dommigrate
+  tools/wireshark examples/dommigrate \
+  examples/lxcconvert
 
 ACLOCAL_AMFLAGS = -I m4
 
