docs: fix some typos in formatdomain.html
In section "Block / character devices" of "Host device assignment",
the description of hostdev element has some error:

For a block device, the type should be "storage", not "block";
For a character device, the type should be "misc", not "char".

Signed-off-by: Jincheng Miao <jmiao@redhat.com>

--- a/docs/formatdomain.html.in
+++ b/docs/formatdomain.html.in
@@ -2932,8 +2932,8 @@
       <dt><code>hostdev</code></dt>
       <dd>The <code>hostdev</code> element is the main container for describing
         host devices. For block/character device passthrough <code>mode</code> is
-        always "capabilities" and <code>type</code> is "block" for a block
-        device, "char" for a character device and "net" for a host network
+        always "capabilities" and <code>type</code> is "storage" for a block
+        device, "misc" for a character device and "net" for a host network
         interface.
       </dd>
       <dt><code>source</code></dt>
