Don't include @LIBS@ in libvirt.pc.in file
The libvirt.pc file we install is ending up polluted with a
load of compiler flags that should be private to the libvirt
build. eg

Libs: -L${libdir} -lvirt -ldl -O2 -g -pipe -Wall \
      -Wp,-D_FORTIFY_SOURCE=2 -fexceptions \
      -fstack-protector-strong --param=ssp-buffer-size=4 \
      -grecord-gcc-switches  -m64 -mtune=generic

this is caused by including @LIBS@ in the Libs: line of the
pkgconfig.pc.in file.

Signed-off-by: Daniel P. Berrange <berrange@redhat.com>

--- a/libvirt.pc.in
+++ b/libvirt.pc.in
@@ -12,5 +12,5 @@ Name: libvirt
 Version: @VERSION@
 Description: libvirt library
 Requires:
-Libs: -L${libdir} -lvirt @LIBS@
+Libs: -L${libdir} -lvirt
 Cflags: -I${includedir}
