test: Disable storage test when FS backend isn't compiled in
'virstoragetest' accesses backing chains of files on local storage with
the help of the storage driver. Disable the test on builds without the
storage driver as the test is crashing otherwise.

Reported by: Roman Bogorodskiy

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -285,9 +285,12 @@ test_programs += nwfilterxml2firewalltest
 endif WITH_NWFILTER
 
 if WITH_STORAGE
-test_programs += storagevolxml2argvtest \
-	virstoragetest
+test_programs += storagevolxml2argvtest
 endif WITH_STORAGE
+
+if WITH_STORAGE_FS
+test_programs += virstoragetest
+endif
 
 if WITH_LINUX
 test_programs += virscsitest
