tests: Fix syntax-check after cdd11151791bc9e61538988438980f41c0185681
makefile_conditionals
tests/Makefile.am:293:endif
maint.mk: match "if FOO" with "endif FOO" in Makefiles
make: *** [sc_makefile_conditionals] Error 1

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -290,7 +290,7 @@ endif WITH_STORAGE
 
 if WITH_STORAGE_FS
 test_programs += virstoragetest
-endif
+endif WITH_STORAGE_FS
 
 if WITH_LINUX
 test_programs += virscsitest
