Change 'interface' to 'iface' in virNetworkDHCPLease
Variables/fields named 'interface' clash with system
header symbols on some platforms.

Signed-off-by: Daniel P. Berrange <berrange@redhat.com>

--- a/include/libvirt/libvirt.h.in
+++ b/include/libvirt/libvirt.h.in
@@ -5174,7 +5174,7 @@ typedef enum {
 typedef struct _virNetworkDHCPLease virNetworkDHCPLease;
 typedef virNetworkDHCPLease *virNetworkDHCPLeasePtr;
 struct _virNetworkDHCPLease {
-    char *interface;            /* Network interface name */
+    char *iface;                /* Network interface name */
     long long expirytime;       /* Seconds since epoch */
     int type;                   /* virIPAddrType */
     char *mac;                  /* MAC address */
