docs: Fix broken link in the HACKING page
The link to the page "how to get your code into an open source
project" has been fixed.

Signed-off-by: Michele Paolino <m.paolino@virtualopensystems.com>
Signed-off-by: Martin Kletzander <mkletzan@redhat.com>

--- a/docs/hacking.html.in
+++ b/docs/hacking.html.in
@@ -260,7 +260,7 @@
     <p>
       There is more on this subject, including lots of links to background
       reading on the subject, on
-      <a href="http://et.redhat.com/~rjones/how-to-supply-code-to-open-source-projects/">
+      <a href="http://people.redhat.com/rjones/how-to-supply-code-to-open-source-projects/">
         Richard Jones' guide to working with open source projects</a>.
     </p>
 
