Actually fix the spec file
There was a '%' missing before the last {rhel}.
Tested on RHEL-7 this time.

--- a/libvirt.spec.in
+++ b/libvirt.spec.in
@@ -522,7 +522,7 @@ BuildRequires: libapparmor-devel
 %if %{with_network}
 BuildRequires: dnsmasq >= 2.41
 BuildRequires: iptables
-    %if (0%{?fedora} && 0%{?fedora} < 17) || (0%{?rhel} && 0{?rhel} < 7)
+    %if (0%{?fedora} && 0%{?fedora} < 17) || (0%{?rhel} && 0%{?rhel} < 7)
 BuildRequires: iptables-ipv6
     %endif
 BuildRequires: radvd
@@ -768,7 +768,7 @@ Requires: libvirt-daemon = %{version}-%{release}
 Requires: dnsmasq >= 2.41
 Requires: radvd
 Requires: iptables
-            %if (0%{?fedora} && 0%{?fedora} < 17) || (0%{?rhel} && 0{?rhel} < 7)
+            %if (0%{?fedora} && 0%{?fedora} < 17) || (0%{?rhel} && 0%{?rhel} < 7)
 Requires: iptables-ipv6
             %endif
 
@@ -785,7 +785,7 @@ Summary: Nwfilter driver plugin for the libvirtd daemon
 Group: Development/Libraries
 Requires: libvirt-daemon = %{version}-%{release}
 Requires: iptables
-            %if (0%{?fedora} && 0%{?fedora} < 17) || (0%{?rhel} && 0{?rhel} < 7)
+            %if (0%{?fedora} && 0%{?fedora} < 17) || (0%{?rhel} && 0%{?rhel} < 7)
 Requires: iptables-ipv6
             %endif
 Requires: ebtables
